Edit district Tests